# YOPO_isaac_lab

./: .cursorignore  .gitignore  README.md
analysis/: bode_tracking_analysis.py
assets/robot./: px4_params.json  robot.urdf
assets/robot./meshes/: Link_5.stl  Link_6.stl  Link_7.stl  Link_8.stl  base_link.stl
docs/: control_planner_bandwidth_analysis.md
env_tools/autodl/: start.sh
env_tools/autodl/image/: Dockerfile  entrypoint.sh
env_tools/docker/isaaclab/: .env  Dockerfile  docker-compose.yml
ros2_ws/src/quadrotor_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/quadrotor_msgs/msg/: PositionCommand.msg
scripts/: batch_run.py  clean_trash_logs.py  init.sh  monitor_memory.py  onnx2cvi.py  setup_runners.sh  start.sh
yopo_drone/: __init__.py  run.py
yopo_drone/env/: drone_env_editor.py
yopo_drone/tasks/: __init__.py  editor_scene_eval_ego.py  hover_initial_position.py  no_obstacle_env_cfg.py
yopo_drone/tasks/yopo/: __init__.py  train.py
yopo_drone/utils/: __init__.py  eval_ego.py  px4_controller.py  robot_model.py  ros2_udp_bridge.py
